test/files/neg/t7187.scala
class EtaExpandZeroArg {
  def foo(): () => String = () => ""
  val f: () => Any = foo

  // f() would evaluate to <function0> instead of ""
}
